# Claude-Patent-Creator

./: .env.example  .gitignore  .gitignore.gitban  .mcp.json  .typos.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING-gitban.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  fix_imports.py  fix_paths.py  install.py  package.json  pyproject.toml  pyrightconfig.json  setup.py
.claude/: CLAUDE.md.gitban  settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/gitban-dispatcher/: SKILL.md
.claude/skills/gitban-pr/: SKILL.md
.claude/skills/gitban-sprint-closeout-reviewer/: SKILL.md
.gitban/: .viewer-port  README.md  forge.yaml  scaffold-manifest.json  user_config.json
.gitban/agents/traces/: agent-d0f0e9d5-c88.jsonl  session-2026-06-21.jsonl
.gitban/cards/: EPODL-todo-P0-bug-step-3c-phase-3-reader-atomic-index-publish-under-index-lock-a5aivr.md  EPODL-todo-P0-refactor-step-2-phase-0-validity-predicate-spine-and-extractor-free-function-refactor-wp8iqb.md  EPODL-todo-P1-chore-epodl-sprint-closeout-jekmaz.md  EPODL-todo-P1-chore-step-1-epodl-sprint-planning-ebd43g.md  EPODL-todo-P1-feature-step-3a-phase-1-epc-acquires-as-a-real-pdf-from-wipo-lex-ihuscq.md  EPODL-todo-P1-feature-step-3b-phase-2-epo-guidelines-acquire-as-in-force-epo-guidelines-txt-y9ulpc.md  EPODL-todo-P1-feature-step-4-phase-4-deferred-default-non-blocking-background-epo-pct-wiring-96bji4.md
.gitban/docs/: development-lifecycle.md
.gitban/hooks/: forge-action-guard.sh  validate-no-direct-card-edit.sh
.gitban/hooks/lib/: selftest_fixtures.json
.gitban/roadmap/: roadmap.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml
agents/: epo-patent-analyzer.md  epo-patent-drafter.md  mpep-expert.md  mpep-researcher.md  patent-analyzer.md  patent-creator.md  patent-development.md  patent-drafter.md  patent-illustrator.md  patent-researcher.md  patent-search-specialist.md  pct-application-specialist.md  prior-art-searcher.md
commands/: check-pct-formalities.md  configure-bigquery.md  create-epo-patent.md  create-patent.md  full-review.md  rebuild-index.md  review-claims.md  review-epo-claims.md  review-epo-formalities.md  review-formalities.md  review-specification.md  search-epo.md  search-prior-art.md  setup-patent-creator.md  setup-patent-reviewer.md  setup-patent-system.md  test-system.md
docs/: ENVIRONMENT_VARIABLES.md  GPU_SETUP.md  PATENTSVIEW_API_SETUP.md  PATENTSVIEW_DATA_ACCESS.md  PATENTSVIEW_SEARCH_API.md  USPTO_API_SETUP.md
docs/adr/: ADR-001-epo-law-acquisition-architecture.md  NOM-001-epo-law-acquisition-architecture.md
docs/designs/: epo-law-acquisition.md
docs/prds/: PRD-001-epo-law-acquisition.md
evaluations/: bigquery-search.yaml  claims-analysis-accuracy.yaml  mpep-search-quality.yaml  patent-workflow.yaml
hooks/: hooks.json
mcp_server/: __init__.py  analyzer_base.py  base_index.py  bigquery_search.py  claims_analyzer.py  cli.py  diagram_generator.py  downloaders.py  epo_api.py  epo_claims_analyzer.py  epo_downloaders.py  epo_formalities_checker.py  epo_specification_analyzer.py  evaluation.py  formalities_checker.py  graphviz_installer.py  hardware_detect.py  health_check.py  hyde.py  logging_config.py  monitoring.py  mpep_search.py  patent_corpus.py  patent_index.py  path_utils.py  pct_formalities_checker.py  response_helpers.py  server.py  specification_analyzer.py  uspto_api.py  validation.py
mcp_server/tools/: __init__.py  analyzer_tools.py  bigquery_tools.py  diagram_tools.py  epo_analyzer_tools.py  epo_search_tools.py  mpep_tools.py  patent_law_tools.py  prior_art_tools.py  system_tools.py  uspto_search_tools.py
mcp_server/utils/: device.py
scripts/: _epo_guidelines_scrape.py  auto_setup.py  check_gpu.py  extract_zips.py  format-code.sh  install-gpu.bat  install-gpu.sh  install_graphviz.py  remove_unicode.py  setup-env.sh  setup_bigquery_auth.py  test_analyzers.py  test_bigquery.py  test_bigquery_logging.py  test_bq_simple.py  test_checkpoint.py  test_download.py  test_embedding_speed.py  test_epo_analyzers.py  test_gpu.py  test_gpu_index.py  test_install.py  test_uspto_odp_api.py
skills/bigquery-patent-search/: SKILL.md
skills/epc-search/: SKILL.md
skills/epo-patent-analyzer/: SKILL.md
skills/epo-patent-search/: SKILL.md
skills/mpep-search/: mpep_search.py
skills/patent-diagrams/: diagram_skill.py
skills/patent-reviewer/: SKILL.md
skills/patent-search/: README.md  SKILL.md  bigquery_search.py  examples.md  patent_search.py  requirements.txt
skills/pct-application/: SKILL.md
skills/prior-art-search/: SKILL.md  prior_art_types.py
skills/setup-assistant/: SKILL.md  filing-reference.md
tests/: conftest.py  test_bigquery_budget.py  test_cross_jurisdiction.py  test_device.py  test_downloaders.py  test_epo_claims_analyzer.py  test_epo_formalities.py  test_epo_spec_analyzer.py  test_hardware_detect.py  test_pct_formalities.py  test_uspto_api.py
