[project]
name = "claude-patent-creator"
version = "0.2.0"
description = "MPEP-based Patent Creator for patent creation with examiner-level accuracy"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "RobThePCGuy" }]
keywords = ["patent", "uspto", "mpep", "mcp", "rag", "ai", "legal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # NOTE: A bare `pip install` lands a CPU torch wheel here so the package
    # is functional out of the box. `patent-creator setup` detects GPUs and
    # swaps in a CUDA/MPS torch wheel for a 5-10x speedup on index building.
    "torch>=2.0",                          # CPU baseline; setup may swap to GPU build
    "mcp>=1.21.0",                         # MCP Server Framework (includes FastMCP)
    "PyMuPDF>=1.26.0",                     # PDF processing (verified Jan 2025)
    "sentence-transformers>=5.1.2,<6.0.0", # Embedding models (verified Jan 2025)
    "faiss-cpu>=1.13.2",                   # Vector search (numpy 2.x support, latest patch)
    "numpy>=1.26.0,<3.0.0",                # numpy 2.x compatible with faiss-cpu >=1.13.0
    "rank-bm25>=0.2.2",                    # Lexical search
    "beautifulsoup4>=4.14.3",              # HTML/XML parsing (verified Jan 2025)
    "lxml>=6.0.2",                         # XML processing (verified Jan 2025)
    "requests>=2.32.5",                    # HTTP client (verified Jan 2025)
    "graphviz>=0.21",                      # Diagram generation
    "pillow>=12.0.0",                      # Image processing (Oct 2025)
    "transformers>=4.57.6,<5.0.0",         # HuggingFace transformers (verified Jan 2025)
    "google-cloud-bigquery>=3.41.0",       # BigQuery patent search 100M+ (verified Jan 2025)
    "xmltodict>=1.0.4",                   # XML to dict parsing for EPO OPS API responses
    "db-dtypes>=1.1.1",                    # Required by BigQuery for certain data types
    "pydantic>=2.12.5",                    # Data validation and settings management
    "pydantic-settings>=2.11.0",            # Settings management from environment variables
    "defusedxml>=0.7.1",                   # Secure XML parsing
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=23.0.0", "ruff>=0.15.10"]
gpu = [
    # For GPU acceleration (5-10x faster)
    # Install handled by 'patent-creator setup' with automatic hardware detection
    # Manual: pip install torch torchvision --index-url https://download.pytorch.org/whl/cu128
    # Latest PyTorch: 2.9.1 (Nov 2025) with CUDA 12.8 support
    # Note: faiss-gpu-cu12 available for Linux only
]
llm = [
    # API-based HyDE query expansion (opt-in via HYDE_BACKEND=api)
    "anthropic>=0.94.0", # Claude API for HyDE
    "openai>=2.31.0",    # OpenAI API for HyDE
]

[project.scripts]
patent-creator = "mcp_server.cli:main"

[project.urls]
Homepage = "https://github.com/RobThePCGuy/Claude-Patent-Creator"
Documentation = "https://github.com/RobThePCGuy/Claude-Patent-Creator#readme"
Repository = "https://github.com/RobThePCGuy/Claude-Patent-Creator"
Issues = "https://github.com/RobThePCGuy/Claude-Patent-Creator/issues"

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Auto-discover all packages with __init__.py
where = ["."]
include = ["mcp_server*"]

[tool.setuptools.package-data]
mcp_server = ["*.py"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
]
ignore = [
    "E501",  # Line too long (handled by black)
    "B008",  # Do not perform function calls in argument defaults
    "B904",  # Use raise from within except
    "N803",  # Argument name should be lowercase (dependency injection pattern uses class names)
    "N817",  # CamelCase imported as acronym (ElementTree as ET is standard convention)
    "SIM112",  # Use capitalized environment variable (Windows env vars are correctly cased)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py
"test_*.py" = ["ARG"]     # Unused function arguments in tests
"mcp_server/cli.py" = ["ARG001", "E402"]  # CLI handlers must accept args; sys.path manipulation before imports
"mcp_server/server.py" = ["ARG001", "E402"]  # DI parameters; imports follow critical site-packages/env setup
"scripts/test_epo_analyzers.py" = ["E402"]  # sys.path manipulation before imports
"mcp_server/validation.py" = ["N802"]  # Field() shim matching Pydantic API
"mcp_server/tools/*.py" = ["ARG001"]  # Dependency injection parameters for tool registration
"mcp_server/uspto_api.py" = ["ARG001"]  # Fallback decorator parameter
"mcp_server/epo_api.py" = ["ARG001"]  # Fallback decorator parameter
"mcp_server/epo_*.py" = ["ARG001"]  # Analyzer parameters
"skills/prior-art-search/prior_art_types.py" = ["ARG001"]  # Not-yet-implemented function stubs

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [
    ".git",
    ".venv",
    "venv",
    "env",
    "ENV",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "dist",
    "build",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "faiss.*",
    "sentence_transformers.*",
    "anthropic.*",
    "mcp.*",
    "fitz.*",
    "bs4.*",
    "graphviz.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests requiring GPU",
    "api: marks tests requiring API keys",
]

[tool.coverage.run]
branch = true
source = ["mcp_server"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/ENV/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
    "env",
    "ENV",
]
skips = [
    "B101",  # assert_used - we use asserts in tests
]

[tool.pyright]
venvPath = "."
venv = "venv"
reportCallInDefaultInitializer = false
reportGeneralTypeIssues = false
